--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
 	    'http://otile1.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpg'
 	).addTo(map);
 
+	function onEachFeature(feature, layer) {
+    layer.bindPopup(feature.properties.DISTRICT_N);
+	}
+
 	L.geoJson (districts, {
 		fill: true,
 		weight: 3,
-		color: "#000"
-	}).addTo(map);
+		color: "#000",
+		onEachFeature: onEachFeature
+	})
+		.addTo(map);
 
 // Geojson-utils
 
