--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 	<script src="district-shapefiles.js"></script>
 	<script src="geojson-utils.js"></script>
 </head>
@@ -29,10 +30,6 @@
 	    'http://otile1.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.jpg'
 	).addTo(map);
 
-	// functions for district styles & features
-	function onEachFeature(feature, layer) {
-    layer.bindPopup('District ' + feature.properties.DISTRICT_N);
-	}
 	// add colors to different districts
 	function getColor(d) {
 	    return d > 9 ? '#8dd3c7' :
@@ -46,39 +43,54 @@
 	           d > 1   ? '#98e986' :
 	                      '#bc80bd';
 	}
-	function style(feature) {
-	    return {
-	        fillColor: getColor(feature.properties.DISTRICT_N),
-	        weight: 2,
-	        opacity: 1,
-	        color: 'white',
-	        dashArray: '3',
-	        fillOpacity: 0.7,
-	    };
-	}
-	// END
 
 	// adding district shapefiles to Map
-	var districtLayer = L.geoJson (districts, {
-		style: style,
-		onEachFeature: onEachFeature
-	})
-		.addTo(map);
-	// END
+	var districtLayer = L.geoJson(districts, {
+		style: function style(feature) {
+		    return {
+		        fillColor: getColor(feature.properties.DISTRICT_N),
+		        weight: 2,
+		        opacity: 1,
+		        color: 'white',
+		        dashArray: '3',
+		        fillOpacity: 0.7,
+		    };
+		},
+		onEachFeature: function onEachFeature(feature, layer) {
+		    layer.bindPopup('District ' + feature.properties.DISTRICT_N);
+		}
+	}).addTo(map);
 
-	// A popup that is triggered when you click a district
-	// NOTE: overrides .bindPopup
-	var popup = L.popup();
+	districtLayer.on('click', function onDistrictClick(e) {
+		return ;
+			var url = 'https://data.austintexas.gov/resource/i26j-ai4z.json?$select=sr_type_desc,count%28sr_number%29&$group=sr_type_desc&$where=sr_location_council_district=%27' + district_id + '%27%20and%20sr_created_date%20%3E=%20%272014-05-30%27%20and%20sr_created_date%20%3C%20%272014-05-31%27&$order=count_service_request_sr_number%20desc';
 
-	function onDistrictClick(e) {
-	    popup
-	        .setLatLng(e.latlng)
-	        .setContent("You clicked the map at " + e.latlng.toString())
-	        .openOn(map);
-	}
+			console.log('GET', url, 'for feature', feature);
 
-	districtLayer.on('click', onDistrictClick);
+			$.ajax({
+				method: 'GET',
+				url: url,
+			}).done(function(data, status) {
+				console.log(url_all_districts, 'done', status, data)
+			}).fail(function(xhr, status, err) {
+					console.error(url_all_districts, 'fail', status, err);
+			});
+	});
 
+
+	var url_all_districts = 'http://data.austintexas.gov/resource/i26j-ai4z.json';
+
+	$(document).ready(function() {
+		console.log('document ready');
+		$.ajax({
+			method: 'GET',
+			url: url_all_districts
+		}).done(function(data, status) {
+			console.log(url_all_districts, 'done', status, data)
+		}).fail(function(xhr, status, err) {
+				console.error(url_all_districts, 'fail', status, err);
+		});
+	});
 
 	</script>
 </html>
