Adding table div that updates SR types and counts on map click

--- a/indexlol.html
+++ b/indexlol.html
@@ -14,6 +14,41 @@
 	<h1>Open 311 vs 10-1 District Map</h1>
 	<h2>an <a href="https://twitter.com/atxhack4change">@ATXHackforChange</a> project</h2>
 	<div id="map" class="map"></div>
+	<div class="district-311-info">
+		<div class="district-title">District <span class="district-number">1</span></div>
+		<div class="district-311-list">
+			<table>
+				<tbody>
+					<thead>
+						<td>Service Type</td>
+						<td>Count</td>
+					</thead>
+					<tr class="SR-1">
+						<td class="SR-1-type">Click a District</td>
+						<td class="SR-1-count">to see the most frequent service requests</td>
+					</tr>
+					<tr class="SR-2">
+						<td class="SR-2-type"></td>
+						<td class="SR-2-count"></td>
+					</tr>
+					<tr class="SR-3">
+						<td class="SR-3-type"></td>
+						<td class="SR-3-count"></td>
+					</tr>
+					<tr class="SR-4">
+						<td class="SR-4-type"></td>
+						<td class="SR-4-count"></td>
+					</tr>
+					<tr class="SR-5">
+						<td class="SR-5-type"></td>
+						<td class="SR-5-count"></td>
+					</tr>
+
+				</tbody>
+			</table>
+		</div>
+
+	</div>
 
 </body>
 <script src="app.js"></script>
