--- a/indexlol.html
+++ b/indexlol.html
@@ -7,41 +7,66 @@
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 	<script src="district-shapefiles.js"></script>
 	<script src="geojson-utils.js"></script>
 </head>
 <body>
-	<h1>Open 311 vs 10-1 District Map</h1>
-	<h2>an <a href="https://twitter.com/atxhack4change">@ATXHackforChange</a> project</h2>
+	<div class="main-title">
+		<h1>Open 311 vs 10-1 District Map</h1>
+		<h2>an <a href="https://twitter.com/atxhack4change">@ATXHackforChange</a> project</h2>
+	</div>
 	<div id="map" class="map"></div>
 	<div class="district-311-info">
-		<div class="district-title">District <span class="district-number">1</span></div>
+		<h2>
+			<div class="district-title">Click a District</div>
+		</h2>
 		<div class="district-311-list">
 			<table>
 				<tbody>
 					<thead>
-						<td>Service Type</td>
-						<td>Count</td>
+							<td class="thead-1"></td>
+							<td class="thead-2"></td>
 					</thead>
 					<tr class="SR-1">
-						<td class="SR-1-type">Click a District</td>
-						<td class="SR-1-count">to see the most frequent service requests</td>
+						<td class="SR-1 type">...to see the most frequent 311 Service Requests in that area</td>
+						<td class="SR-1 count"></td>
 					</tr>
 					<tr class="SR-2">
-						<td class="SR-2-type"></td>
-						<td class="SR-2-count"></td>
+						<td class="SR-2 type"></td>
+						<td class="SR-2 count"></td>
 					</tr>
 					<tr class="SR-3">
-						<td class="SR-3-type"></td>
-						<td class="SR-3-count"></td>
+						<td class="SR-3 type"></td>
+						<td class="SR-3 count"></td>
 					</tr>
 					<tr class="SR-4">
-						<td class="SR-4-type"></td>
-						<td class="SR-4-count"></td>
+						<td class="SR-4 type"></td>
+						<td class="SR-4 count"></td>
 					</tr>
 					<tr class="SR-5">
-						<td class="SR-5-type"></td>
-						<td class="SR-5-count"></td>
+						<td class="SR-5 type"></td>
+						<td class="SR-5 count"></td>
+					</tr>
+					<tr class="SR-6">
+						<td class="SR-6 type"></td>
+						<td class="SR-6 count"></td>
+					</tr>
+					<tr class="SR-7">
+						<td class="SR-7 type"></td>
+						<td class="SR-7 count"></td>
+					</tr>
+					<tr class="SR-8">
+						<td class="SR-8 type"></td>
+						<td class="SR-8 count"></td>
+					</tr>
+					<tr class="SR-9">
+						<td class="SR-9 type"></td>
+						<td class="SR-9 count"></td>
+					</tr>
+					<tr class="SR-10">
+						<td class="SR-10 type"></td>
+						<td class="SR-10 count"></td>
 					</tr>
 
 				</tbody>
