refactor first service request api call

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 							<td class="thead-1"></td>
 							<td class="thead-2"></td>
 					</thead>
+					<tr class="SR-0 service-request-cat">
+						<td class="SR-0 type">...to see the most frequent 311 Service Requests in that area</td>
+						<td class="SR-0 count"></td>
+					</tr>
 					<tr class="SR-1 service-request-cat">
-						<td class="SR-1 type">...to see the most frequent 311 Service Requests in that area</td>
+						<td class="SR-1 type"></td>
 						<td class="SR-1 count"></td>
 					</tr>
 					<tr class="SR-2 service-request-cat">
