--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 	<script src="district-shapefiles.js"></script>
 	<script src="geojson-utils.js"></script>
@@ -18,6 +20,10 @@
 	</div>
 	<div id="map" class="map"></div>
 	<div class="district-311-info">
+		<div class="date-picker">
+			<p>From: <input type='text' id="date-from" value=></p>
+			<p>To: <input type='text' id="date-to" value=></p>
+		</div>
 		<h2>
 			<div class="district-title">Click a District</div>
 		</h2>
