--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>311vs10-1</title>
-
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="https://code.jquery.com/jquery-2.1.1.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 	<script src="district-shapefiles.js"></script>
 	<script src="geojson-utils.js"></script>
@@ -16,18 +19,17 @@
 <body>
 	<div class="main-title">
 		<h1>Open 311 vs 10-1 District Map</h1>
-		<h2>an <a href="https://twitter.com/atxhack4change">@ATXHackforChange</a> project</h2>
 	</div>
 	<div id="map" class="map"></div>
 	<div class="district-311-info">
 		<div class="date-picker">
-			<p>From: <input type='text' id="date-from" value=></p>
-			<p>To: <input type='text' id="date-to" value=></p>
+			<div class="date-from">From: <input type='text' id="date-from" value=></div>
+			<div class="date-to">To: <input type='text' id="date-to" value=></div>
 		</div>
-		<h2>
-			<div class="district-title">Click a District</div>
-		</h2>
 		<div class="district-311-list">
+			<h2>
+				<div class="district-title">Click a District</div>
+			</h2>
 			<table>
 				<tbody>
 					<thead>
@@ -104,7 +106,11 @@
 		</div>
 
 	</div>
-
+	
+	<footer>
+		<hr>
+		<h3>an <a href="https://twitter.com/atxhack4change">@ATXHackforChange</a> project</h3>
+	</footer>
 </body>
 <script src="app.js"></script>
 </html>
