--- a/index.html
+++ b/index.html
@@ -35,70 +35,87 @@
 					<thead>
 							<td class="thead-1"></td>
 							<td class="thead-2"></td>
+							<td class="thead-3"></td>
 					</thead>
 					<tr class="SR-0 service-request-cat">
 						<td class="SR-0 type">...to see the most frequent 311 Service Requests in that area</td>
 						<td class="SR-0 count"></td>
+						<td class="SR-0 plot"></td>
 					</tr>
 					<tr class="SR-1 service-request-cat">
 						<td class="SR-1 type"></td>
 						<td class="SR-1 count"></td>
+						<td class="SR-1 plot"></td>
 					</tr>
 					<tr class="SR-2 service-request-cat">
 						<td class="SR-2 type"></td>
 						<td class="SR-2 count"></td>
+						<td class="SR-2 plot"></td>
 					</tr>
 					<tr class="SR-3 service-request-cat">
 						<td class="SR-3 type"></td>
 						<td class="SR-3 count"></td>
+						<td class="SR-3 plot"></td>
 					</tr>
 					<tr class="SR-4 service-request-cat">
 						<td class="SR-4 type"></td>
 						<td class="SR-4 count"></td>
+						<td class="SR-4 plot"></td>
 					</tr>
 					<tr class="SR-5 service-request-cat">
 						<td class="SR-5 type"></td>
 						<td class="SR-5 count"></td>
+						<td class="SR-5 plot"></td>
 					</tr>
 					<tr class="SR-6 service-request-cat">
 						<td class="SR-6 type"></td>
 						<td class="SR-6 count"></td>
+						<td class="SR-6 plot"></td>
 					</tr>
 					<tr class="SR-7 service-request-cat">
 						<td class="SR-7 type"></td>
 						<td class="SR-7 count"></td>
+						<td class="SR-7 plot"></td>
 					</tr>
 					<tr class="SR-8 service-request-cat">
 						<td class="SR-8 type"></td>
 						<td class="SR-8 count"></td>
+						<td class="SR-8 plot"></td>
 					</tr>
 					<tr class="SR-9 service-request-cat">
 						<td class="SR-9 type"></td>
 						<td class="SR-9 count"></td>
+						<td class="SR-9 plot"></td>
 					</tr>
 					<tr class="SR-10 service-request-cat">
 						<td class="SR-10 type"></td>
 						<td class="SR-10 count"></td>
+						<td class="SR-10 plot"></td>
 					</tr>
 					<tr class="SR-11 service-request-cat">
 						<td class="SR-11 type"></td>
 						<td class="SR-11 count"></td>
+						<td class="SR-11 plot"></td>
 					</tr>
 					<tr class="SR-12 service-request-cat">
 						<td class="SR-12 type"></td>
 						<td class="SR-12 count"></td>
+						<td class="SR-12 plot"></td>
 					</tr>
 					<tr class="SR-13 service-request-cat">
 						<td class="SR-13 type"></td>
 						<td class="SR-13 count"></td>
+						<td class="SR-13 plot"></td>
 					</tr>
 					<tr class="SR-14 service-request-cat">
 						<td class="SR-14 type"></td>
 						<td class="SR-14 count"></td>
+						<td class="SR-14 plot"></td>
 					</tr>
 					<tr class="SR-15 service-request-cat">
 						<td class="SR-15 type"></td>
 						<td class="SR-15 count"></td>
+						<td class="SR-15 plot"></td>
 					</tr>
 
 				</tbody>
